Fix image layout issues in footer and add links for mobile under About Me

--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ hgroup > img {
 
 /*MEDIA QUERIES*/
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
 
 	body {
 		font-size: 1.3em;
@@ -297,24 +297,30 @@ hgroup > img {
 	}
 
 	.background-bottom {
-		height: 700px;
+		height: 600px;
 	}
 
 	footer {
-		padding-top: 120px;
+		padding-top: 60px;
 		height: 500px;
+		font-size: .9em;
 	}
 
-	footer > img {
-		height: 560px;
-		width: 390px;
+	.bottom-image {
+		position: relative;
+	}
+
+	.bottom-image > img {
+		height: 500px;
+		width: 340px;
 		object-fit: cover;
 		position: relative;
-		top: -60px;
+		right: 20px;
+		bottom: 20px;
 	}
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
 
 	body {
 		font-size: 1.4em;
@@ -342,6 +348,13 @@ hgroup > img {
 		height: 560px;
 		width: 100%;
 		position: static;
+	}
+
+	header .bio-links {
+		display: flex;
+		justify-content: center;
+		gap: 30px;
+		padding: 0;
 	}
 
 	.name {
@@ -387,22 +400,21 @@ hgroup > img {
 	}
 
 	.background-bottom {
-		height: 600px;
+		height: 700px;
 	}
 
 	.bottom-image {
 		position: relative;
-		margin-top: 80px;
+		margin-top: 150px;
 	}
 
 	.bottom-image > img {
-/*		justify-items: center;*/
 		height: 560px;
 		width: 100vw;
 		object-fit: cover;
-		position: absolute;
-/*		bottom: 0px;*/
-/*		top: -60px;*/
+		position: relative;
+		right: 0px;
+		bottom: 0px;
 	}
 }
 
